[package]
name = "rotsprite"
version = "0.1.4"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tversteeg/rotsprite"
documentation = "https://docs.rs/rotsprite"
description = "Rotate sprites using the rotsprite algorithm"
keywords = ["game", "sprite", "blit", "rotation"]
categories = ["rendering", "game-engines"]

[features]
default = ["blit"]
blit = ["dep:blit"]

[dependencies]
multiversion = "0.7.3"
thiserror = "1.0.57"
blit = { version = "0.8.5", optional = true, default-features = false }

[dev-dependencies]
winit = "0.29.14"
log = "0.4.21"
web-time = "1.1.0"
blit = "0.8.5"
image = { version = "0.24.9", default-features = false, features = ["png"] }
pixels = "0.13.0"
bytemuck = "1.14.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5.1"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3.69", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_log = { version = "1.0.0", features = ["wasm-bindgen", "color"] }
console_error_panic_hook = "0.1.7"

[[example]]
name = "window"
required-features = ["blit"]

[[bench]]
name = "rotsprite"
harness = false

[[bench]]
name = "scale2x"
harness = false

[[bench]]
name = "rotate"
harness = false

[workspace]
members = ["run-wasm"]
