[package]
name = "rotsprite"
version = "0.1.4"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tversteeg/rotsprite"
documentation = "https://docs.rs/rotsprite"
description = "Rotate sprites using the rotsprite algorithm"
keywords = ["game", "sprite", "blit", "rotation"]
categories = ["rendering", "game-engines"]

[features]
default = ["blit"]
blit = ["dep:blit"]

[dependencies]
multiversion = "0.7.4"
thiserror = "1.0.59"

# `blit` feature
blit = { version = "0.8.5", optional = true, default-features = false }
pixel-game-lib = { version = "0.8.0", default-features = false }

[dev-dependencies]
image = { version = "0.24.9", default-features = false, features = ["png"] }
pixel-game-lib = "0.8.0"

[[example]]
name = "window"
required-features = ["blit"]

[[bench]]
name = "rotsprite"
harness = false

[[bench]]
name = "scale2x"
harness = false

[[bench]]
name = "rotate"
harness = false

[workspace]
members = ["run-wasm"]
